Celulas em python

--- a/notebooks/teste.ipynb
+++ b/notebooks/teste.ipynb
@@ -3,40 +3,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "print(\" dev - celula  1\")"
+    "print(\"celula  1\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "print(\" dev - celula  2\")"
+    "print(\"celula  2\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "print(\" dev - celula  3\")"
+    "print(\"celula  3\")"
    ]
   }
  ],
